--- a/index.html
+++ b/index.html
@@ -388,9 +388,21 @@
 
                 <div style="text-align: center; margin: 2rem 0;">
                     <div
-                        style="font-size: 3rem; font-family: var(--font-heading); color: var(--color-navy); font-weight: 700;">
-                        $9,995</div>
-                    <p>Tuition</p>
+                        style="display: inline-block; background: rgba(218, 165, 32, 0.15); color: var(--color-gold); padding: 0.5rem 1.5rem; border-radius: 50px; font-weight: 700; margin-bottom: 1.5rem; font-size: 1rem; border: 1px solid var(--color-gold);">
+                        🎉 Early Adopter Discount: Save $1,000
+                    </div>
+                    <div
+                        style="display: flex; align-items: baseline; justify-content: center; gap: 1.5rem; flex-wrap: wrap; margin-bottom: 0.5rem;">
+                        <div style="font-size: 2rem; color: #a0aec0; text-decoration: line-through; font-weight: 600;">
+                            $9,995</div>
+                        <div
+                            style="font-size: 4rem; font-family: var(--font-heading); color: var(--color-navy); font-weight: 700; line-height: 1;">
+                            $8,995</div>
+                    </div>
+                    <p
+                        style="color: #e74c3c; font-weight: 700; letter-spacing: 0.5px; text-transform: uppercase; font-size: 0.9rem; margin-bottom: 0.5rem;">
+                        Limited to the first 20 Coaches</p>
+                    <p style="font-size: 1.1rem; color: var(--color-text-light);">Tuition</p>
                 </div>
 
                 <p>Why? Because this isn’t a quick course or a weekend seminar. This is a professional-level credential,
@@ -507,6 +519,23 @@
                         trainings, lead workshops, or be the “in-house expert” on communication. This certification
                         gives you the credibility and content to do exactly that. Let us know if your company would like
                         to buy a license for multiple trainers.</p>
+                    <div
+                        style="margin-top: 1.5rem; padding: 1.5rem; background: rgba(218, 165, 32, 0.1); border-radius: var(--radius-md); border-left: 4px solid var(--color-gold);">
+                        <h4 style="margin-bottom: 1rem; color: var(--color-navy); font-size: 1.1rem;">Need help getting
+                            sponsored?</h4>
+                        <p style="margin-bottom: 1rem; font-size: 0.95rem;">Download these resources to share with your
+                            employer:</p>
+                        <div style="display: flex; gap: 1rem; flex-wrap: wrap;">
+                            <a href="/People_Coach_Infographic.png" target="_blank" class="btn btn-sm"
+                                style="background: var(--color-navy); color: white; font-size: 0.9rem; border: none;">
+                                📄 View Infographic
+                            </a>
+                            <a href="/People_Intelligence_Investment_Proposal.pdf" target="_blank" class="btn btn-sm"
+                                style="background: var(--color-navy); color: white; font-size: 0.9rem; border: none;">
+                                💼 Investment Proposal
+                            </a>
+                        </div>
+                    </div>
                 </div>
                 <div class="faq-item" style="margin-bottom: 2rem;">
                     <h3>Is there a payment plan available?</h3>
