Add Terms of Service page and link in footer

--- a/index.html
+++ b/index.html
@@ -642,7 +642,8 @@
         <div class="container">
             <img src="/sop-logo-white.png" alt="Science of People" class="nav-logo"
                 style="height: 30px; margin-bottom: 1.5rem; opacity: 0.7;">
-            <p>&copy; 2025 Science of People. All rights reserved.</p>
+            <p>&copy; 2025 Science of People. All rights reserved. | <a href="terms.html"
+                    style="color: rgba(255,255,255,0.7); text-decoration: underline;">Terms of Service</a></p>
         </div>
     </footer>
 
