Fix blanks in Terms of Service

--- a/terms.html
+++ b/terms.html
@@ -68,7 +68,8 @@
         <h1>PEOPLE COACH</h1>
         <p class="subtitle">CERTIFICATION AND LICENSE AGREEMENT</p>
 
-        <p>This Certification and License Agreement (“Agreement”) is a binding contract between ________ LLC (“SP”) and
+        <p>This Certification and License Agreement (“Agreement”) is entered into by and between Science of People, LLC
+            (“SP”) and
             the individual or entity that completes and submits an online application for the People Coach Program and
             indicates acceptance of this Agreement by checking the applicable box or otherwise electronically accepting
             this Agreement (“Applicant”).</p>
@@ -107,7 +108,7 @@
 
         <h2>2. Enrollment, Certification, Renewal, and Revocation Process</h2>
         <p>(a) Application. To register for the People Coach Program, Applicant shall electronically submit an
-            application through SP’s website at _____________ (“Application”) and pay an enrollment fee in the amount of
+            application through SP’s website (“Application”) and pay an enrollment fee in the amount of
             $9,995.00 (“Enrollment Fee”). The Application will provide (i) a payment portal for the Enrollment Fee and
             (ii) a clickable and downloadable link to a copy of this Agreement and will require Applicant’s express
             agreement and confirmation (via a check box or other electronic means) to be bound by the terms and
