Add new FAQ items

--- a/index.html
+++ b/index.html
@@ -629,6 +629,18 @@
                         hope is for you to take our curriculum and fit it into your existing practice or teaching.</p>
                 </div>
                 <div class="faq-item" style="margin-bottom: 2rem;">
+                    <h3>I’m interested, but nervous about the investment.</h3>
+                    <p>Totally fair. I always ask myself: ‘What will this enable me to do that I can’t do now?’ If you see yourself using these tools to lead even a few workshops, improve your team, or upgrade your existing coaching offers, it tends to pay for itself in both tangible and intangible ways — credibility, confidence, and opportunities you can say yes to.</p>
+                </div>
+                <div class="faq-item" style="margin-bottom: 2rem;">
+                    <h3>Can I do this if I’m introverted / not super charismatic?</h3>
+                    <p>Yes. Some of the best facilitators are thoughtful, calm, inner-focused folks. This isn’t about becoming a rah-rah motivational speaker. It’s about being structured, prepared, and genuinely helpful with your own style.</p>
+                </div>
+                <div class="faq-item" style="margin-bottom: 2rem;">
+                    <h3>Do I need a certain number of hours, degrees, or certifications beforehand?</h3>
+                    <p>No. We care much more about your motivation to help others and your willingness to do the work than about your collection of letters after your name.</p>
+                </div>
+                <div class="faq-item" style="margin-bottom: 2rem;">
                     <h3>How do I apply?</h3>
                     <p>Click the “Apply Now” button and complete the application. If accepted, you’ll receive your
                         enrollment link and can begin immediately.</p>
