feat: add Book a Call button

--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
                 <img src="/sop-logo.png" alt="Science of People" class="nav-logo logo-dark">
             </a>
             <div class="nav-actions">
+                <a href="https://calendar.app.google/fSLyHVAjQNVWmYev5" target="_blank"
+                    class="btn btn-outline-gold btn-sm" style="margin-right: 0.5rem;">Book a Call</a>
                 <a href="https://docs.google.com/forms/d/e/1FAIpQLSdnQR4hKM5U8jd1fVIDY8CniySVAEEJD9Tq5zt9LYqQko69mg/viewform?usp=sharing&ouid=114244337736645548832"
                     target="_blank" class="btn btn-gold btn-sm">Apply Now</a>
             </div>
@@ -70,8 +72,11 @@
             <h1>Become a Certified People Coach</h1>
             <p>Empower others. Transform organizations. Elevate your career.</p>
 
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSdnQR4hKM5U8jd1fVIDY8CniySVAEEJD9Tq5zt9LYqQko69mg/viewform?usp=sharing&ouid=114244337736645548832"
-                target="_blank" class="btn btn-gold">Apply for the 2026 Cohort</a>
+            <div style="display: flex; gap: 1rem; justify-content: center; flex-wrap: wrap;">
+                <a href="https://calendar.app.google/fSLyHVAjQNVWmYev5" target="_blank" class="btn btn-outline-gold">Book a Call</a>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSdnQR4hKM5U8jd1fVIDY8CniySVAEEJD9Tq5zt9LYqQko69mg/viewform?usp=sharing&ouid=114244337736645548832"
+                    target="_blank" class="btn btn-gold">Apply for the 2026 Cohort</a>
+            </div>
         </div>
     </header>
 
@@ -442,9 +447,13 @@
                         <li>Elevate your career with the credibility of a Science of People certification.</li>
                     </ul>
                 </div>
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLSdnQR4hKM5U8jd1fVIDY8CniySVAEEJD9Tq5zt9LYqQko69mg/viewform?usp=sharing&ouid=114244337736645548832"
-                    target="_blank" class="btn btn-gold" style="font-size: 1.5rem; padding: 1.5rem 3rem;">Apply Now to
-                    Join the Next Cohort</a>
+                <div style="display: flex; gap: 1rem; justify-content: center; flex-wrap: wrap;">
+                    <a href="https://calendar.app.google/fSLyHVAjQNVWmYev5" target="_blank" class="btn btn-outline-gold"
+                        style="font-size: 1.5rem; padding: 1.5rem 3rem;">Book a Call</a>
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSdnQR4hKM5U8jd1fVIDY8CniySVAEEJD9Tq5zt9LYqQko69mg/viewform?usp=sharing&ouid=114244337736645548832"
+                        target="_blank" class="btn btn-gold" style="font-size: 1.5rem; padding: 1.5rem 3rem;">Apply Now to
+                        Join the Next Cohort</a>
+                </div>
             </div>
 
             <div
