feat: update landing page to waitlist status
- Remove pricing and specific dates
- Add waitlist opt-in forms
- Integrate Customer.io tracking specific for deployment

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Become a Certified People Coach | Science of People</title>
     <meta name="title" content="Become a Certified People Coach | Science of People">
     <meta name="description"
-        content="Join the Science of People Certification Program. Master proven, research-backed frameworks to coach communication and people skills. Applications close January 9, 2025.">
+        content="Join the Science of People Certification Program. Master proven, research-backed frameworks to coach communication and people skills. Join the waitlist for the next cohort.">
     <meta name="keywords"
         content="people coach certification, communication coaching, Science of People, leadership training, soft skills certification, coaching certification">
 
@@ -21,7 +21,7 @@
     <meta property="og:url" content="https://coach.scienceofpeople.com/">
     <meta property="og:title" content="Become a Certified People Coach | Science of People">
     <meta property="og:description"
-        content="Master proven, research-backed frameworks to coach communication and people skills. Join the 2026 cohort starting January 12. Applications close January 9, 2025.">
+        content="Master proven, research-backed frameworks to coach communication and people skills. Join the waitlist for the next cohort.">
     <meta property="og:image" content="https://coach.scienceofpeople.com/social-share.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
@@ -33,7 +33,7 @@
     <meta name="twitter:url" content="https://coach.scienceofpeople.com/">
     <meta name="twitter:title" content="Become a Certified People Coach | Science of People">
     <meta name="twitter:description"
-        content="Master proven, research-backed frameworks to coach communication and people skills. Join the 2026 cohort starting January 12. Applications close January 9, 2025.">
+        content="Master proven, research-backed frameworks to coach communication and people skills. Join the waitlist for the next cohort.">
     <meta name="twitter:image" content="https://coach.scienceofpeople.com/social-share.png">
     <meta name="twitter:creator" content="@vvanedwards">
     <meta name="twitter:site" content="@scienceofpeople">
@@ -59,8 +59,7 @@
             <div class="nav-actions">
                 <a href="https://calendar.app.google/fSLyHVAjQNVWmYev5" target="_blank"
                     class="btn btn-outline-gold btn-sm" style="margin-right: 0.5rem;">Book a Call</a>
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLSdnQR4hKM5U8jd1fVIDY8CniySVAEEJD9Tq5zt9LYqQko69mg/viewform?usp=sharing&ouid=114244337736645548832"
-                    target="_blank" class="btn btn-gold btn-sm">Apply Now</a>
+                <a href="#apply" class="btn btn-gold btn-sm">Join Waitlist</a>
             </div>
         </div>
     </nav>
@@ -73,10 +72,13 @@
             <p>Empower others. Transform organizations. Elevate your career.</p>
 
             <div class="cta-buttons">
-                <a href="https://calendar.app.google/fSLyHVAjQNVWmYev5" target="_blank" class="btn btn-outline-gold">Book a Call</a>
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLSdnQR4hKM5U8jd1fVIDY8CniySVAEEJD9Tq5zt9LYqQko69mg/viewform?usp=sharing&ouid=114244337736645548832"
-                    target="_blank" class="btn btn-gold">Apply for the 2026 Cohort</a>
+                <!-- Waitlist Form (Hero) -->
+                <form class="waitlist-form" id="hero-waitlist-form">
+                    <input type="email" name="email" placeholder="Enter your email address" required>
+                    <button type="submit" class="btn btn-gold">Join Waitlist</button>
+                </form>
             </div>
+            <p class="form-message" id="hero-form-message">Thanks! You're on the list.</p>
         </div>
     </header>
 
@@ -377,54 +379,16 @@
     <!-- Important Dates -->
     <section id="logistics" class="section" style="background-color: var(--color-off-white);">
         <div class="container">
-            <h2 class="text-center">Important Dates</h2>
+            <h2 class="text-center">Next Cohort</h2>
             <div
                 style="max-width: 800px; margin: 0 auto; background: var(--color-white); padding: 3rem; border-radius: var(--radius-lg); box-shadow: var(--shadow-md); border-top: 4px solid var(--color-gold);">
 
-                <div style="text-align: center; margin-bottom: 2rem;">
-                    <p
-                        style="font-size: 1.25rem; color: #e74c3c; font-weight: 700; margin-bottom: 1.5rem; text-transform: uppercase; letter-spacing: 1px;">
-                        Applications Close January 9, 2025</p>
-                    <h3 style="margin-bottom: 0.5rem;">2026 Cohort Schedule</h3>
-                    <p style="font-size: 1.5rem; color: var(--color-navy); font-weight: 700;">January 12th — April 1st,
-                        2026</p>
-                    <p style="color: var(--color-gold); font-weight: 600; margin-top: 0.5rem;">✨ You can get started
-                        with the first lesson immediately upon acceptance.</p>
-                </div>
-
-                <div style="display: grid; gap: 2rem; margin-top: 2rem;">
-                    <div style="display: flex; gap: 1rem; align-items: flex-start;">
-                        <div style="background: rgba(10, 25, 47, 0.05); padding: 0.75rem; border-radius: 50%;">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
-                                fill="none" stroke="var(--color-navy)" stroke-width="2" stroke-linecap="round"
-                                stroke-linejoin="round">
-                                <circle cx="12" cy="12" r="10"></circle>
-                                <polyline points="12 6 12 12 16 14"></polyline>
-                            </svg>
-                        </div>
-                        <div>
-                            <h4 style="margin-bottom: 0.5rem; font-size: 1.1rem;">Flexible Pacing</h4>
-                            <p style="font-size: 1rem; margin-bottom: 0;">You may watch the lessons at your own pace,
-                                though we strongly encourage you to learn along with your cohort to maximize the
-                                community experience.</p>
-                        </div>
-                    </div>
-
-                    <div style="display: flex; gap: 1rem; align-items: flex-start;">
-                        <div style="background: rgba(10, 25, 47, 0.05); padding: 0.75rem; border-radius: 50%;">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
-                                fill="none" stroke="var(--color-navy)" stroke-width="2" stroke-linecap="round"
-                                stroke-linejoin="round">
-                                <path d="M23 7l-7 5 7 5V7z"></path>
-                                <rect x="1" y="5" width="15" height="14" rx="2" ry="2"></rect>
-                            </svg>
-                        </div>
-                        <div>
-                            <h4 style="margin-bottom: 0.5rem; font-size: 1.1rem;">8 Live Sessions</h4>
-                            <p style="font-size: 1rem; margin-bottom: 0;">I’ll be teaching 8 live sessions during this
-                                training window so I can answer your questions directly as you learn.</p>
-                        </div>
-                    </div>
+                <div style="text-align: center;">
+                    <h3 style="margin-bottom: 0.5rem;">Coming July 2026</h3>
+                    <p style="font-size: 1.125rem; margin-top: 1rem;">
+                        We are currently finishing our current cohort. Join the waitlist to be the first to know when
+                        applications open for our July 2026 session.
+                    </p>
                 </div>
 
             </div>
@@ -435,9 +399,9 @@
     <section id="apply" class="section" style="background-color: var(--color-navy); color: var(--color-white);">
         <div class="container">
             <div style="text-align: center; margin-bottom: 4rem;">
-                <h2 style="color: var(--color-gold);">Apply Now</h2>
+                <h2 style="color: var(--color-gold);">Join the Waitlist</h2>
 
-                <p>We're currently accepting applications for our 2026 cohort. Once accepted, you can begin immediately.
+                <p>We are currently full for our current cohort. Join the waitlist to get notified when spots open up.
                 </p>
                 <div style="margin: 2rem 0;">
                     <p>This is your invitation to:</p>
@@ -447,11 +411,15 @@
                         <li>Elevate your career with the credibility of a Science of People certification.</li>
                     </ul>
                 </div>
-                <div class="cta-buttons cta-buttons-large">
-                    <a href="https://calendar.app.google/fSLyHVAjQNVWmYev5" target="_blank" class="btn btn-outline-gold">Book a Call</a>
-                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSdnQR4hKM5U8jd1fVIDY8CniySVAEEJD9Tq5zt9LYqQko69mg/viewform?usp=sharing&ouid=114244337736645548832"
-                        target="_blank" class="btn btn-gold">Apply Now</a>
+
+                <div class="cta-buttons cta-buttons-large" style="display: block;">
+                    <!-- Waitlist Form (Footer) -->
+                    <form class="waitlist-form" id="footer-waitlist-form">
+                        <input type="email" name="email" placeholder="Enter your email address" required>
+                        <button type="submit" class="btn btn-gold">Join Waitlist</button>
+                    </form>
                 </div>
+                <p class="form-message" id="footer-form-message">Thanks! You're on the list.</p>
             </div>
 
             <div
@@ -461,22 +429,9 @@
                     people you will serve.</p>
 
                 <div style="text-align: center; margin: 2rem 0;">
-                    <div
-                        style="display: inline-block; background: rgba(218, 165, 32, 0.15); color: var(--color-gold); padding: 0.5rem 1.5rem; border-radius: 50px; font-weight: 700; margin-bottom: 1.5rem; font-size: 1rem; border: 1px solid var(--color-gold);">
-                        🎉 Early Adopter Discount: Save $1,000
-                    </div>
-                    <div
-                        style="display: flex; align-items: baseline; justify-content: center; gap: 1.5rem; flex-wrap: wrap; margin-bottom: 0.5rem;">
-                        <div style="font-size: 2rem; color: #a0aec0; text-decoration: line-through; font-weight: 600;">
-                            $9,995</div>
-                        <div
-                            style="font-size: 4rem; font-family: var(--font-heading); color: var(--color-navy); font-weight: 700; line-height: 1;">
-                            $8,995</div>
-                    </div>
-                    <p
-                        style="color: #e74c3c; font-weight: 700; letter-spacing: 0.5px; text-transform: uppercase; font-size: 0.9rem; margin-bottom: 0.5rem;">
-                        Limited to the first 20 Coaches</p>
-                    <p style="font-size: 1.1rem; color: var(--color-text-light);">Tuition</p>
+                    <p style="font-size: 1.25rem; color: var(--color-navy); margin-top: 1rem;">
+                        Pricing and enrollment details will be shared when applications reopen.
+                    </p>
                 </div>
 
                 <p>Why? Because this isn’t a quick course or a weekend seminar. This is a professional-level credential,
@@ -546,7 +501,8 @@
                     relationships, teams, and organizations.<br><br>If that’s you, I can’t wait to see your
                     application."</p>
                 <img src="/vanessa-portrait.jpg" alt="Vanessa"
-                    style="width: 150px; height: 150px; border-radius: 50%; object-fit: cover; margin: 2rem auto; box-shadow: var(--shadow-md);" loading="lazy">
+                    style="width: 150px; height: 150px; border-radius: 50%; object-fit: cover; margin: 2rem auto; box-shadow: var(--shadow-md);"
+                    loading="lazy">
             </div>
         </div>
     </section>
@@ -633,15 +589,21 @@
                 </div>
                 <div class="faq-item" style="margin-bottom: 2rem;">
                     <h3>I’m interested, but nervous about the investment.</h3>
-                    <p>Totally fair. I always ask myself: ‘What will this enable me to do that I can’t do now?’ If you see yourself using these tools to lead even a few workshops, improve your team, or upgrade your existing coaching offers, it tends to pay for itself in both tangible and intangible ways — credibility, confidence, and opportunities you can say yes to.</p>
+                    <p>Totally fair. I always ask myself: ‘What will this enable me to do that I can’t do now?’ If you
+                        see yourself using these tools to lead even a few workshops, improve your team, or upgrade your
+                        existing coaching offers, it tends to pay for itself in both tangible and intangible ways —
+                        credibility, confidence, and opportunities you can say yes to.</p>
                 </div>
                 <div class="faq-item" style="margin-bottom: 2rem;">
                     <h3>Can I do this if I’m introverted / not super charismatic?</h3>
-                    <p>Yes. Some of the best facilitators are thoughtful, calm, inner-focused folks. This isn’t about becoming a rah-rah motivational speaker. It’s about being structured, prepared, and genuinely helpful with your own style.</p>
+                    <p>Yes. Some of the best facilitators are thoughtful, calm, inner-focused folks. This isn’t about
+                        becoming a rah-rah motivational speaker. It’s about being structured, prepared, and genuinely
+                        helpful with your own style.</p>
                 </div>
                 <div class="faq-item" style="margin-bottom: 2rem;">
                     <h3>Do I need a certain number of hours, degrees, or certifications beforehand?</h3>
-                    <p>No. We care much more about your motivation to help others and your willingness to do the work than about your collection of letters after your name.</p>
+                    <p>No. We care much more about your motivation to help others and your willingness to do the work
+                        than about your collection of letters after your name.</p>
                 </div>
                 <div class="faq-item" style="margin-bottom: 2rem;">
                     <h3>How do I apply?</h3>
